[package]
name = "doppler-swarm"
version = "0.4.5"
edition = "2021"
authors = ["Pavel Lazureykis <pavel@lazureykis.dev>"]
description = "Watch for changes in Doppler and update your Docker Swarm services."
license = "MIT"
homepage = "https://github.com/whopio/doppler-swarm/"
categories = ["command-line-utilities"]
keywords = ["doppler", "docker", "swarm", "secrets", "configuration"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
env_logger = "0.11.0"
futures = "0.3.30"
log = "0.4.20"
reqwest = { version = "0.11.23", default-features = false, features = ["json", "stream", "rustls-tls", "rustls-tls-webpki-roots"] }
rustls = "0.22.1"
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.35.1", features = ["full"] }
webpki-roots = "0.26.0"
